syntax = "proto3";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

package staffing.employee.v1;

option go_package = "./pb;pb";

service Employee {
    rpc CreateEmployee(EmployeeCreateCommand) returns (EmployeeCreateResponse);
    rpc DeleteEmployee(EmployeeDeleteCommand) returns (google.protobuf.Empty);
    rpc AssignProject(EmployeeAssignProjectCommand) returns (google.protobuf.Empty);
    rpc UnassignProject(EmployeeUnassignProjectCommand) returns (google.protobuf.Empty);
}

message EmployeeCreateCommand {
    string name = 1 [(validate.rules).string.len = 3]; 
}

message EmployeeCreateResponse {
   string id = 1;
   string name = 2;
}

message EmployeeDeleteCommand {
    string id = 1;
}

message EmployeeAssignProjectCommand {
    string id = 1; 
    string projectId = 2;
}

message EmployeeUnassignProjectCommand {
    string id = 1; 
}
